--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="letter">
-          <p>動画には投稿していませんが、<span>趣味でピアノやギターなど</span>の楽器を練習しています。<br>他にも<span>イラストを描いたり、このWebサイトの作成などのプログラミングの勉強</span>もしています。</p>
+          <p>動画には投稿していませんが、<span>趣味でピアノやギターなど</span>の楽器を練習しています。<br>他にも<span>イラストを描いたり、Webサイトの作成などのプログラミングの勉強</span>もしています。</p>
           <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。乞うご期待。</p>
         </div>
       </div>
