--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="SNS">
           <div class="youtube">
-            <img src="/icon2_circle.png">
+            <img src="icon2_circle.png">
             <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき - YouTube</a>
           </div>
           <div class="twitter">
