--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       <meta charset="UTF-8">
       <link rel="stylesheet" href="stylesheet.css">
   </head>
-  
   <body>
     <header> 
       <p>Raki/らきのホームページへようこそ</p>
@@ -15,7 +14,8 @@
         <div class="intro">
           <h2>自己紹介</h2>
           <p>どうも、<span>Raki/らき</span>です。現在YouTubeでのゲーム配信をメインに活動しています。</p>
-          <p><span>ゲームのプレイ動画やPCデバイスについて</span>の動画を不定期に投稿しています。良ければ見ていってください！</p>
+          <p><span>ゲームのプレイ動画やPCデバイスについて</span>の動画を不定期に投稿しています。</p>
+          <p>良ければ見ていってください！</p>
         </div>
         <div class="SNS">
           <div class="youtube">
@@ -28,7 +28,8 @@
           </div>
         </div>
         <div class="letter">
-          <p>動画には投稿していませんが、<span>趣味でピアノやギターなど</span>の楽器を練習しています。<br>他にも<span>イラストを描いたり、Webサイトの作成などのプログラミングの勉強</span>もしています。</p>
+          <p>動画には投稿していませんが、<span>趣味でピアノやギターなど</span>の楽器を練習しています。</p>
+          <p>他にも<span>イラストを描いたり、このWebサイトの作成などのプログラミングの勉強</span>もしています。</p>
           <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。乞うご期待。</p>
         </div>
       </div>
