--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき - YouTube</a>
           </div>
           <div class="twitter">
-            <img src="icon_circle.png">
+            <img src="twitter-icon.png">
             <a href="https://twitter.com/Raki00Ez">Raki/らき - Twitter</a>
           </div>
         </div>
