--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
         </div>
         <div class="SNS">
           <div class="youtube">
-            <img src="icon2_circle.png">
-            <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき - YouTube</a>
+            <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Raki/らき - YouTube</a>
           </div>
           <div class="twitter">
-            <img src="twitter-icon.png">
-            <a href="https://twitter.com/Raki00Ez">Raki/らき - Twitter</a>
+            <a href="https://twitter.com/Raki_GlT">Raki/らき - Twitter</a>
           </div>
         </div>
         <div class="letter">
