--- a/index.html
+++ b/index.html
@@ -9,29 +9,50 @@
     <header> 
       <p>Raki/らきのホームページへようこそ</p>
     </header>
-    <div class=""main>
+    <div class="main">
       <div class="container">
         <div class="intro">
-          <h2>自己紹介</h2>
-          <p>どうも、<span>Raki/らき</span>です。現在YouTubeでのゲーム配信をメインに活動しています。</p>
-          <p><span>ゲームのプレイ動画やPCデバイスについて</span>の動画を不定期に投稿しています。</p>
+          <h1>自己紹介</h1>
+          <p>どうも、<span><u>Raki/らき</u></span>です。<br>現在<span>YouTube</span>や<span>Twitch</span>での活動を行っています。<br>内容は<span class="green">ゲームのプレイ動画やPCデバイス</span>についてです。</p>
           <p>良ければ見ていってください！</p>
         </div>
         <div class="SNS">
           <div class="youtube">
-            <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Raki/らき - YouTube</a>
+            <img src="/Blacky_bg.png">
+            <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき(Main)<br>Youtube</a>
+          </div>
+          <div class="youtube">
+            <img src="/チャンネルアイコン.JPG">
+            <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Rakiの趣味ch(Sub)<br>YouTube</a>
+          </div>
+          <div class="twitch">
+            <img src="/デフォルメ.png">
+            <a href="https://www.twitch.tv/raki_ez">Raki_Ez<br>Twitch</a>
           </div>
           <div class="twitter">
-            <a href="https://twitter.com/Raki_GlT">Raki/らき - Twitter</a>
+            <img src="/icon rk.png">
+            <a href="https://twitter.com/Raki_GlT">@Raki_fav<br>Twitter</a>
           </div>
         </div>
         <div class="letter">
-          <p>動画には投稿していませんが、<span>趣味でピアノやギターなど</span>の楽器を練習しています。</p>
-          <p>他にも<span>イラストを描いたり、このWebサイトの作成などのプログラミングの勉強</span>もしています。</p>
-          <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。乞うご期待。</p>
+          <p>動画には投稿していませんが、<span class="green">趣味でピアノやギターなど</span>の楽器を練習しています。</p>
+          <p>他にも<span class="green">イラストを描いたり、このWebサイトの作成などのプログラミングの勉強</span>もしています。</p>
+          <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。<br>乞うご期待。</p>
         </div>
       </div>
     </div>
+
+    <div id="video">
+      <h2>人気の動画</h2>
+      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sISb2yBtxjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KyPE9Jh6cGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wyG2VLHfwr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <h2>ゲーム動画</h2>
+      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/m-ajE9F6Slg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/Lj02Gf5H80c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/L3-Kz86KBBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    
     <footer>
       <div class="container">
         <h3>イラストの一部</h3>
