--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="SNS">
           <div class="youtube">
-            <img src="/Blacky_bg.png">
+            <img url="/Blacky_bg.png">
             <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき(Main)<br>Youtube</a>
           </div>
           <div class="youtube">
