--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         </div>
         <div class="SNS">
           <div class="youtube">
-            <img url="/Blacky_bg.png">
+            <img src="https://github.com/RakiEz/Home/blob/main/Blacky_bg.png?raw=true">
             <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき(Main)<br>Youtube</a>
           </div>
           <div class="youtube">
-            <img src="/チャンネルアイコン.JPG">
+            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E3%82%A2%E3%82%A4%E3%82%B3%E3%83%B3.JPG?raw=true">
             <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Rakiの趣味ch(Sub)<br>YouTube</a>
           </div>
           <div class="twitch">
-            <img src="/デフォルメ.png">
+            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E3%82%A2%E3%82%A4%E3%82%B3%E3%83%B3.JPG?raw=true">
             <a href="https://www.twitch.tv/raki_ez">Raki_Ez<br>Twitch</a>
           </div>
           <div class="twitter">
-            <img src="/icon rk.png">
+            <img src="https://github.com/RakiEz/Home/blob/main/icon%20rk.png?raw=true">
             <a href="https://twitter.com/Raki_GlT">@Raki_fav<br>Twitter</a>
           </div>
         </div>
