--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Rakiの趣味ch(Sub)<br>YouTube</a>
           </div>
           <div class="twitch">
-            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E3%82%A2%E3%82%A4%E3%82%B3%E3%83%B3.JPG?raw=true">
+            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%87%E3%83%95%E3%82%A9%E3%83%AB%E3%83%A1.png?raw=true">
             <a href="https://www.twitch.tv/raki_ez">Raki_Ez<br>Twitch</a>
           </div>
           <div class="twitter">
