--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Raki/らき - Home</title>
       <meta charset="UTF-8">
       <link rel="stylesheet" href="stylesheet.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
   <body>
     <header> 
@@ -13,30 +14,29 @@
       <div class="container">
         <div class="intro">
           <h1>自己紹介</h1>
-          <p>どうも、<span><u>Raki/らき</u></span>です。<br>現在<span>YouTube</span>や<span>Twitch</span>での活動を行っています。<br>内容は<span class="green">ゲームのプレイ動画やPCデバイス</span>についてです。</p>
+          <p>どうも、<span><u style="color:mediumspringgreen">Raki/らき</u></span>です。</p>
+          <p>現在<span style="color:rgb(50, 255, 129)">YouTube</span>や<span style="color:rgb(50, 255, 129)">Twitch</span>でゲーム配信しています。</p>
           <p>良ければ見ていってください！</p>
         </div>
         <div class="SNS">
-          <div class="youtube">
-            <img src="https://github.com/RakiEz/Home/blob/main/Blacky_bg.png?raw=true">
-            <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA">Raki/らき(Main)<br>Youtube</a>
+          <div class="icon">
+            <img style="border-radius: 300px; width:50%; opacity: 0.85;" src="なにか2.png">
           </div>
-          <div class="youtube">
-            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E3%82%A2%E3%82%A4%E3%82%B3%E3%83%B3.JPG?raw=true">
-            <a href="https://www.youtube.com/channel/UCG1ghkPKxoti1Hbw27cIcRw">Rakiの趣味ch(Sub)<br>YouTube</a>
-          </div>
-          <div class="twitch">
-            <img src="https://github.com/RakiEz/Home/blob/main/%E3%83%87%E3%83%95%E3%82%A9%E3%83%AB%E3%83%A1.png?raw=true">
-            <a href="https://www.twitch.tv/raki_ez">Raki_Ez<br>Twitch</a>
-          </div>
-          <div class="twitter">
-            <img src="https://github.com/RakiEz/Home/blob/main/icon%20rk.png?raw=true">
-            <a href="https://twitter.com/Raki_GlT">@Raki_fav<br>Twitter</a>
+          <div class="link">
+            <div class="youtube">
+              <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA"><span class="fa fa-youtube"></span>  Raki/らき</a>
+            </div>
+            <div class="twitch">
+              <a href="https://www.twitch.tv/raki_ez"><span class="fa fa-twitch"></span>  Raki_Ez</a>
+            </div>
+            <div class="twitter">
+              <a href="https://twitter.com/Raki_GlT"><span class="fa fa-twitter"></span>  @rakiezz</a>
+            </div>
           </div>
         </div>
         <div class="letter">
           <p>動画には投稿していませんが、<span class="green">趣味でピアノやギターなど</span>の楽器を練習しています。</p>
-          <p>他にも<span class="green">イラストを描いたり、このWebサイトの作成などのプログラミングの勉強</span>もしています。</p>
+          <p>他にも<span class="green">イラストを描いたり、Webサイトの作成などのプログラミングの勉強</span>もしています。</p>
           <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。<br>乞うご期待。</p>
         </div>
       </div>
@@ -58,6 +58,7 @@
         <h3>イラストの一部</h3>
         <img src="dane.png">
         <img src="sans-icon.png">
+        <img style="width: 600px;" src="20161215102955.png">
       </div>
     </footer>
   </body>
