--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="https://www.twitch.tv/raki_ez"><span class="fa fa-twitch"></span>  Raki_Ez</a>
             </div>
             <div class="twitter">
-              <a href="https://twitter.com/rzkiezgg"><span class="fa fa-twitter"></span>  @rakiezgg</a>
+              <a href="https://twitter.com/rakiezgg"><span class="fa fa-twitter"></span>  @rakiezgg</a>
             </div>
           </div>
         </div>
