--- a/index.html
+++ b/index.html
@@ -1,65 +1,116 @@
 <!DOCTYPE html>
-<html>
-  <head>
-      <title>Raki/らき - Home</title>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" href="stylesheet.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <header> 
-      <p>Raki/らきのホームページへようこそ</p>
-    </header>
-    <div class="main">
-      <div class="container">
-        <div class="intro">
-          <h1>自己紹介</h1>
-          <p>どうも、<span><u style="color:mediumspringgreen">Raki/らき</u></span>です。</p>
-          <p>現在<span style="color:rgb(50, 255, 129)">YouTube</span>や<span style="color:rgb(50, 255, 129)">Twitch</span>でゲーム配信しています。</p>
-          <p>良ければ見ていってください！</p>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raki_Ez's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+<body>
+    <div class="contents">
+        <div class="left-container">
+            <ul>
+                <li>
+                    <div class="dropdown">
+                        <div class="introduce">
+                            <h3>Raki_Ezとは</h3>
+                            <div class="dropdown-menu">
+                                <div class="text-container">
+                                    <p>Raki_Ezは主に<b>Twitchで活動中のゲーム配信者！</b></p>
+                                    <p><span class="color-red">Valorant</span>をメインに、様々なゲームをプレイしてるよ</p>
+                                    <p>歴戦のスライム達と共に数々の困難を乗り越えてきたよ</p>
+                                </div>
+                                <img src="panel - Introduce.png">
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <div class="twitch-activity">
+                            <h3>Twitch</h3>
+                            <div class="dropdown-menu">
+                                <h4>Twitchでの活動</h4>
+                                <p>主にValorantを配信！たまにまったり系のゲームをします。</p>
+                                <p>基本一人でやってますが、たまに他の配信者さんとやることがあります</p>
+                                よければ見てみてね～<a href="https://www.twitch.tv/raki_ez"><br><span class="fa fa-twitch"></span>Twitch</a>
+                                <iframe src="https://clips.twitch.tv/embed?clip=HelpfulPiercingWheelOneHand-WcIqELwvtV8qgund&parent=www.example.com" title="Twitch video player" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                                <iframe src="https://clips.twitch.tv/embed?clip=BoringInventiveFrogEleGiggle-sgfx-bNcXXobMa3T&parent=www.example.com" title="Twitch video player" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <div class="youtube-activity">
+                            <h3>Youtube</h3>
+                            <div class="dropdown-menu">
+                                <h4>Youtubeでの活動</h4>
+                                <p>主にValorantのキルクリップやデバイス関連の動画をアップしています</p>
+                                よければ見てみてね～<a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA"><br><span class="fa fa-youtube"></span>Youtube</a>
+                                <iframe class="video" width="560" height="315" src="https://youtu.be/66EQTj4xpho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="video" width="560" height="315" src="https://youtu.be/jeO1uXXRYOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <div class="twitter-activity">
+                            <h3>Twitter</h3>
+                            <div class="dropdown-menu">
+                                <h4>Twitterのつぶやき</h4>
+                                <p>日常のつぶやきや配信の告知を行っています</p>
+                                チェックしてみてね～<a href="https://twitter.com/rakiezgg"><br><span class="fa fa-twitter"></span>Twitter</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="dropdown">
+                        <div class="hobby">
+                            <h3>趣味</h3>
+                            <div class="dropdown-menu">
+                                    <h4>ゲーム・動画編集</h4>
+                                    <p>初めてのFPSはR6Sで、その後PUBGやApex、Valorantとプレイしてます</p>
+                                    <p>それまではずっとマイクラやスマブラしてました</p>
+                                    <iframe class="video" width="560" height="315" src="https://youtu.be/HFCTtYm3ZCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe class="video" width="560" height="315" src="https://youtu.be/wyG2VLHfwr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <h4>イラスト</h4>
+                                    <p>アナログ絵から初めて現在デジタル絵に挑戦中！</p>
+                                    <p>まだまだ上手くなくて模写ばっかりだけど、いつかはちゃんと描けるようになる！！</p>
+                                    <img src="キュウコン.png" alt="illust">
+                                    <h4>音楽・楽器</h4>
+                                    <p>歌ったり弾いたり、もちろん聴くのも好き！</p>
+                                    <p>やりたいことが多すぎて全部中途半端になってるけど、どれか一つは選べない</p>
+                                    <p>ちなみに作曲とかボカロとかも手を出してるけど成果が出せてない</p>
+                                    <h4>プログラミング</h4>
+                                    <p>このwebサイトも試行錯誤しながら作ってます</p>
+                                    <p>試行錯誤して思った通りに動くのがとても面白い！</p>
+                                    <p>配信で使うツールを一気に起動できたり、動きのあるwebサイトを作れたりと広い範囲で活用できます！</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div class="SNS">
-          <div class="icon">
-            <img style="border-radius: 300px; width:50%; opacity: 0.85;" src="なにか2.png">
-          </div>
-          <div class="link">
-            <div class="youtube">
-              <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA"><span class="fa fa-youtube"></span>  Raki/らき</a>
+        <div class="right-container">
+            <div class="fix">
+                <h2>Raki_Ez</h2>
+                <div class="links">
+                    <a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA"><span class="fa fa-youtube"></span>  Raki/らき</a>
+                    <a href="https://www.twitch.tv/raki_ez"><span class="fa fa-twitch"></span>  Raki_Ez</a>
+                    <a href="https://twitter.com/rakiezgg"><span class="fa fa-twitter"></span>  @rakiezgg</a>
+                </div>
+                <div class="slider">
+                    <img src="panel - Introduce.png" alt="img1" class="active">
+                    <img src="なにか2v2.png" alt="img2">
+                </div>
             </div>
-            <div class="twitch">
-              <a href="https://www.twitch.tv/raki_ez"><span class="fa fa-twitch"></span>  Raki_Ez</a>
-            </div>
-            <div class="twitter">
-              <a href="https://twitter.com/rakiezgg"><span class="fa fa-twitter"></span>  @rakiezgg</a>
-            </div>
-          </div>
         </div>
-        <div class="letter">
-          <p>動画には投稿していませんが、<span class="green">趣味でピアノやギターなど</span>の楽器を練習しています。</p>
-          <p>他にも<span class="green">イラストを描いたり、Webサイトの作成などのプログラミングの勉強</span>もしています。</p>
-          <p>人に見せられるくらいに上達したら動画を投稿してみようかなと考えています。<br>乞うご期待。</p>
-        </div>
-      </div>
     </div>
-
-    <div id="video">
-      <h2>人気の動画</h2>
-      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/sISb2yBtxjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KyPE9Jh6cGg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wyG2VLHfwr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <h2>ゲーム動画</h2>
-      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/m-ajE9F6Slg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/Lj02Gf5H80c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe class="video" width="560" height="315" src="https://youtube.com/embed/L3-Kz86KBBM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    
-    <footer>
-      <div class="container">
-        <h3>イラストの一部</h3>
-        <img src="dane.png">
-        <img src="sans-icon.png">
-        <img style="width: 600px;" src="20161215102955.png">
-      </div>
-    </footer>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
