--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                                 <h4>Youtubeでの活動</h4>
                                 <p>主にValorantのキルクリップやデバイス関連の動画をアップしています</p>
                                 よければ見てみてね～<a href="https://www.youtube.com/channel/UCs-sLy9rx6MHQTWhy9oe5iA"><br><span class="fa fa-youtube"></span>Youtube</a>
-                                <iframe class="video" width="560" height="315" src="https://youtu.be/66EQTj4xpho" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                <iframe class="video" width="560" height="315" src="https://youtu.be/jeO1uXXRYOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe width="1280" height="720" src="https://www.youtube.com/embed/66EQTj4xpho" title="【2分でデバイス紹介】Razer Blackwidow Lite 紹介します【VOICEROID】【Raki】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe width="1280" height="720" src="https://www.youtube.com/embed/jeO1uXXRYOI" title="【Valorant】Highlight #12【Raki_Ez】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
