--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                     <h4>ゲーム・動画編集</h4>
                                     <p>初めてのFPSはR6Sで、その後PUBGやApex、Valorantとプレイしてます</p>
                                     <p>それまではずっとマイクラやスマブラしてました</p>
-                                    <iframe class="video" width="560" height="315" src="https://youtu.be/HFCTtYm3ZCE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                    <iframe class="video" width="560" height="315" src="https://youtu.be/wyG2VLHfwr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HFCTtYm3ZCE" title="【R6S】Rainbow Six Siege - Killclip #16 【Raki】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wyG2VLHfwr8" title="【PUBG】結月ゆかりが逝くPUBG#5【VOICEROID実況】【Raki】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     <h4>イラスト</h4>
                                     <p>アナログ絵から初めて現在デジタル絵に挑戦中！</p>
                                     <p>まだまだ上手くなくて模写ばっかりだけど、いつかはちゃんと描けるようになる！！</p>
